# Aurelius

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ADRs/: 0001-in-house-dag.md
docs/: README.md
examples/: claude_desktop_config.json
site/: index.html
skill/aurelius/: SKILL.md
src/aurelius/: __init__.py  __main__.py  cli.py  config.py  server.py
src/aurelius/agents/: __init__.py  base.py  memory_agent.py  placeholders.py
src/aurelius/agents/execution/: __init__.py  code_generator_agent.py  experiment_designer_agent.py  result_aggregator_agent.py  sandbox_executor_agent.py
src/aurelius/agents/hypothesis/: __init__.py  hypothesis_validator_agent.py  literature_miner_agent.py  pattern_discovery_agent.py  theory_generator_agent.py
src/aurelius/agents/publication/: __init__.py  draft_paper_agent.py  latex_formatter_agent.py  living_doc_versioner_agent.py  patent_freedom_agent.py  preprint_packager_agent.py  proof_of_rigor_agent.py
src/aurelius/agents/verification/: __init__.py  adversarial_reviewer_agent.py  citation_verifier_agent.py  methodology_auditor_agent.py
src/aurelius/autonomous/: __init__.py  llm.py  pipeline.py
src/aurelius/memory/: __init__.py  episodic.py
src/aurelius/orchestration/: __init__.py  graph.py  research_graph.py  state.py  swarm.py  workflow_manager.py
src/aurelius/proof/: __init__.py  anchor.py  ipfs.py  rigor.py
src/aurelius/sandbox/: __init__.py  docker_runner.py  methodology.py
src/aurelius/tests/: test_agents.py  test_desci.py  test_graph.py  test_methodology.py  test_phase23_agents.py  test_phase6.py  test_proof.py  test_publication.py  test_sandbox.py  test_swarm.py  test_version.py  test_workflow_manager.py
src/aurelius/tools/: __init__.py  diagrams.py  drafting.py  latex.py  ledger.py  multilingual.py  numeric.py  patents.py  preprint.py  retractions.py  scholarly.py  screening.py  search.py  style.py
